--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@ a:hover{
     opacity: 0.7;
 }
 
+.home-section{
+    display: flex
+}
+
 
 /* ============= left-menu ============= */
 .left-menu{
@@ -56,7 +60,7 @@ a:hover{
 
 .left-menu img{
     width: 200px;
-    height: 200px;
+    height: 180px;
     cursor: pointer;
 }
 
@@ -66,8 +70,8 @@ a:hover{
 }
 .logo{
     position: absolute;
-    top: 115px;
-    left: 110px;
+    top: 103px;
+    left: 108px;
 }
 
 .logo h6{
@@ -122,8 +126,8 @@ a:hover{
 
 .left-footer{
     position: absolute;
-    bottom: 40px;
-    padding-right: 11px
+    bottom: 50px;
+    padding-right: 11px;
 }
 
 .language{
@@ -135,6 +139,15 @@ a:hover{
     height: 35px;
     border: solid 1px white;
     border-radius: 5px;
+    margin: 5px 0;
+    width: 63px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.language:hover{
+    background-color: white !important;
+    color: black;
 }
 
 .language p {
@@ -144,6 +157,11 @@ a:hover{
 .language i {
     font-size: 10px;
     margin-left: 10px;
+}
+
+.language-section{
+    position: absolute;
+    top: 40px;
 }
 
 .adress{
@@ -178,6 +196,312 @@ a:hover{
 }
 
 /* ============= //left-menu ============= */
+
+/* ============= home-left ============= */
+
+.home-left{
+    width: 30%;
+}
+
+.home-left-img{
+    width: 100%;
+    height: 25%;
+    background-image: url(../img/foto5.png);
+    background-size: cover;
+}
+
+.home-left-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.home-cart{
+    width: 100%;
+    height: 50%;
+    background-color: white;
+    display: flex;
+
+}
+
+.cart-section{
+    width: 50%;
+    height: 100%;
+    /* border: solid 1px black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/foto8.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    overflow: hidden;
+}
+
+
+.cart-section:hover .cart-section-hover{
+    visibility: visible;
+    opacity: 1;
+    padding: 20px 20px 35px 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.cart-section h3{
+    font-size: 25px;
+    color: white;
+}
+
+.cart-section img{
+    width: 130px;
+    height: 130px;
+}
+
+.cart-section-hover{
+    background-image: url(../img/foto9.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 150%;
+    height: 150%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    transition: 0.3s;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.cart-section-hover img{
+    width: 70px;
+    height: 80px;
+}
+
+
+.cart-section-hover h3{
+    font-size: 18px;
+    color: black;
+    margin: 0;
+}
+
+.cart-section-hover p{
+    font-size: 15px;
+    color: black;
+}
+
+.hover-between{
+    text-align: center;
+}
+
+.hover-between img{
+    margin: 0 auto;
+}
+
+.hover-between a{
+    padding: 8px 30px;
+    font-size: 18px;
+    font-weight: bold;
+    border: black 1px solid;
+    color: black;
+    margin-bottom: 20px;
+    transition: 0.3s;
+    
+}
+
+.hover-between a:hover{
+    border: solid 1px rgb(212, 198, 0);
+    color: rgb(212, 198, 0);
+    
+}
+
+.home-footer{
+    width: 100%;
+    height: 25%;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-footer h6{
+    color: white;
+    margin: 0;
+}
+
+.info-img img{
+    width: 80%;
+    height: 80%;
+    margin-left: 10%;
+    margin-top: 2%;
+}
+
+.info-icon{
+    width: 90%;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info-icon .card-icons{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.icons-p{
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+
+}
+
+.icons-p p{
+    color: white;
+    font-size: 11px;
+    text-align: center;
+    margin: 0;
+}
+
+
+.info-icon i{
+    font-size: 18px;
+    color:  rgb(212, 198, 0);
+}
+
+.info-icon h6{
+    font-size: 10px;
+}
+
+#percent i{
+    font-size: 30px;
+}
+
+#percent .icons{
+    width: 60px;
+    height: 60px;
+
+}
+
+.info-icon .icons{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: solid 1px rgb(212, 198, 0);
+    margin-bottom: 10px;
+}
+
+.awrow-icon i{
+    font-size: 25px;
+    color:  rgb(212, 198, 0);
+    
+}
+
+
+
+
+/* ============= partners ============= */
+
+.partners-right{
+    position: absolute;
+    width: 45%;
+    height: 100%;
+    background-color: white;
+    right: 0;
+    top: 0;
+    /* position: relative; */
+}
+
+.partners{
+    width: 33.33%;
+    height: 25%;
+    position: relative;
+}
+
+.partners img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.partners-hover{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    padding: 40px;
+    padding-top: 60%;
+    opacity: 0;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    transition: 0.3s;
+    overflow: hidden;
+}
+
+#url:hover{
+    text-decoration: underline;
+}
+
+.hover-icon{
+    border-bottom: black solid 1px;
+    /* padding: 10px; */
+    display: flex;
+    align-items: center;
+}
+
+.hover-icon i{
+    font-size: 30px;
+    margin-right: 10px;
+    color: black;
+    transition: 0.3s;
+}
+
+.hover-icon i:hover{
+    color: rgb(212, 198, 0);
+}
+
+.hover-icon h4{
+    margin-top: 10px;
+}
+
+.partners-hover:hover{
+    opacity: 0.9;
+    z-index: 1;
+    padding-top: 40px;
+}
+.partners-btn{
+    position: absolute;
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    top: 44%;
+    left: -90px;
+}
+
+.partners-btn button{
+    margin: 3px 0 ;
+    background-color: black;
+    color: white;
+    border: solid 1px white;
+    transition: 0.3s;
+}
+
+.partners-btn button:hover{
+    color: rgb(212, 198, 0);
+    border: solid 1px rgb(212, 198, 0);
+}
+
+/* ============= //partners ============= */
 
 
 
